# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.436 2014/05/15 10:46:31 keri Exp $

  15 May 2014; <keri@gentoo.org> -swi-prolog-7.1.11.ebuild,
  -swi-prolog-7.1.12.ebuild:
  Remove old development versions

*swi-prolog-7.1.14 (13 May 2014)

  13 May 2014; <keri@gentoo.org> +swi-prolog-7.1.14.ebuild:
  Bump -7.1 development version

*swi-prolog-6.6.5 (07 May 2014)

  07 May 2014; <keri@gentoo.org> +swi-prolog-6.6.5.ebuild:
  Version bump

*swi-prolog-7.1.13 (18 Apr 2014)

  18 Apr 2014; <keri@gentoo.org> +swi-prolog-7.1.13.ebuild:
  Bump -7.1 development version

  17 Apr 2014; <keri@gentoo.org> -swi-prolog-7.1.8.ebuild,
  -swi-prolog-7.1.9.ebuild, -swi-prolog-7.1.10.ebuild:
  Remove old development versions

*swi-prolog-7.1.12 (17 Apr 2014)

  17 Apr 2014; <keri@gentoo.org> +swi-prolog-7.1.12.ebuild:
  Bump -7.1 development version

*swi-prolog-7.1.11 (08 Apr 2014)

  08 Apr 2014; <keri@gentoo.org> +swi-prolog-7.1.11.ebuild:
  Bump -7.1 development version

*swi-prolog-7.1.10 (20 Mar 2014)

  20 Mar 2014; <keri@gentoo.org> +swi-prolog-7.1.10.ebuild:
  Bump -7.1 development version

*swi-prolog-6.6.4 (20 Mar 2014)

  20 Mar 2014; <keri@gentoo.org> +swi-prolog-6.6.4.ebuild:
  Version bump

  20 Mar 2014; <keri@gentoo.org> -swi-prolog-6.6.1.ebuild:
  Remove old version

*swi-prolog-6.6.3 (19 Mar 2014)

  19 Mar 2014; <keri@gentoo.org> +swi-prolog-6.6.3.ebuild:
  Version bump

  06 Mar 2014; <keri@gentoo.org> swi-prolog-6.6.2.ebuild,
  swi-prolog-7.1.9.ebuild:
  Remove prototype for readline event hook. Closes #503296

  04 Mar 2014; <keri@gentoo.org> -swi-prolog-6.6.0.ebuild,
  -swi-prolog-7.1.6.ebuild, -swi-prolog-7.1.7.ebuild:
  Remove old versions

*swi-prolog-6.6.2 (04 Mar 2014)

  04 Mar 2014; <keri@gentoo.org> +swi-prolog-6.6.2.ebuild:
  Version bump

*swi-prolog-7.1.9 (04 Mar 2014)
