@@ -9,6 +9,7 @@ DIST pl-6.6.4.tar.gz 14830255 SHA256 663977959979e389df0f87c2eb426ab71105c122066
 DIST pl-6.6.5.tar.gz 14837423 SHA256 79ee4526ce8a70d55cfeecbb1acfd737db0ddbe45585faba41a24ddb34484a53 SHA512 8bdf7678c51192185bbd20f008212de7401ca2f497fea02e7b652aa51fca0c1e961fa10efcd256325a6fb0b7ea956b26c8d8def2f11b2f45551f3a82591d6c7c WHIRLPOOL f7bc7236801a6c13402426f95e971d2de41b98dd596e2f13344f4ad56619a81ef587fe626ae1c797255739511d09fad49d21787df9fbefa034278c3a1824f949
 DIST pl-7.1.13.tar.gz 15698076 SHA256 4048733e0278c2957d45773c7032cd0e02afb77cb2d45ebff698370f706c9fe9 SHA512 9b7580914beb7cfdcdecaff3f09d26361a4e8c646611819b6721655b58347fce2fac0b89c1774471a79325b33928e5f856add5119f73c07ea3d9667689425971 WHIRLPOOL 328873b5f5cac069ad9f4ff04862b4893663610f44c5296354d57d5da58ebc1a196baf4708ce1bf4874cf90fad8de8637e8b6ab836b5b49bcac74d0c540a264a
 DIST pl-7.1.14.tar.gz 15695222 SHA256 c2be221cdbb9d4743ac561fd7c0c738545d25de0c47bf6e9557bf323882e5a6f SHA512 b7e6b79b1c63f71e17cf58735c759a0d9389b80aa2a647d71c086805dcf094fd7b8be821990b69de418aac1882ec0eaa2026f3490d201fd467ccaef310a079f4 WHIRLPOOL 37a3e16e94767d0da819dc7b40e0c9835ca04d558a88a4249bddd3b9e0af641d13959a8af7da4da955896d519afa28f8e6a2eae10fabc70af577fc7f90bf7d8f
+DIST pl-7.1.15.tar.gz 15738762 SHA256 2911ee5e9facd02173a37f8b7e7cc3bce43d12c3741469f989d1305e669d3d78 SHA512 2ccf06b71e42f127f3731a011c6eb396fb68afd1d3367d74afa38d9d941923b6e0956576d545d5a03ead79f509fd110c340831ae04c8084b6dcbc924caac830e WHIRLPOOL e25cc8b374b7cc5cd545a640508066958650ab8a1dcc3185967ac1c894a23830a3432b6c50a1753def0393278d0b006ea769e13bb28bc8ff3610f575839f192b
 DIST swi-prolog-6.4.1-gentoo-patchset-0.tar.gz 1593 SHA256 c57b19f6d6f31855db9f6c5c14edb7a20b30ed4b9cfde805bf95182c7dda6565 SHA512 7be7f1bd3a10bb6a436b3f679210aa48de5774c728a4f12de69983458200095b5fe377aa30429566ec5e91c4ea172cc3d4bdfb6486731ed47d045dfa40afacfc WHIRLPOOL e3a135438947eedb71070d3df903c65aefd94c1c1b724f94df396ed0b1e354882c83e6a938816ba64df45b639b00a8cff9c591405f44a472eea4578ab95f232d
 DIST swi-prolog-6.5.3-gentoo-patchset-0.tar.gz 1602 SHA256 e8fdfa7789c037b8ef293d19cc900251dc71eca33db6add2e140f6791a6cd837 SHA512 bf59cc8488e2d46da971ea78a4ae9e383da04c6b79925d73ac5f69f3ed53beaa869d9f78a853f31768461020de1a959bb39c5b0f0a2569683cffb737f9f615de WHIRLPOOL 90bb6ccb21f7f1390b7c28493150840e8cc0fce1d3c31b5c3a56aade8b8bb828783cb5daf9677b78fb33962f478e1d24cffbee93704544dd7e087bb0d36f9784
 DIST swi-prolog-6.6.2-gentoo-patchset-1.tar.gz 1851 SHA256 23d7481204d2e1f064c7f4f44856a09b4e568ac906ee92f1f4b9ef92309a84e7 SHA512 1725a4a71084c6749f77f634e3b6191b993e06971ce294a52e1ecbce6f4144439d7bc25a3c6b8f66ac5f380b0ad4222a4c73f5e4e348d3122cd67423b8d78ca5 WHIRLPOOL 825d772721b21bb9ed893ab9f91c7b489a72e8ff5872877e09b37a4987d697b919e40ad87dc8baeb44f2eed868386b63b0ade1d066cca5c7f53bd65ca0ea9858
@@ -17,6 +18,7 @@ DIST swi-prolog-6.6.4-gentoo-patchset-0.tar.gz 1596 SHA256 727a9ed67cdd8a23bc5d0
 DIST swi-prolog-6.6.5-gentoo-patchset-0.tar.gz 1595 SHA256 baf043ea3a145d8600ecb9c16722e8578b818b3018d50345e951084a26b018e9 SHA512 62f7a73af4d34b8a13378fb65302b01d2445b3e4f7198e293c4fd9b50948feaf632bd5de0af10aaf2cab9d5fcc214fe04d86e6e969e60b23d9bae4a277214041 WHIRLPOOL 95c6449b2248a0277af1cad70ebc16b46fd6b15d540822f1f9e5370760de94171bcdbb98df9915ce85e2ddda55eaf457eacb26b29f3ed4f61b1f69388454b0a5
 DIST swi-prolog-7.1.13-gentoo-patchset-0.tar.gz 1602 SHA256 89a31a33aab3009e8ce47554657f1182c24d36cbc3b2823c44928f424ba2ca0f SHA512 bc9be6f3e516de5f7d8fdcd8bc1dad9b9615677d7125aa65a199c9ca7362388de31f5537831497866891fa743084629ca9f1195baac28e5eeea440b910fe8c7a WHIRLPOOL 263037a6f11e457c2c8da70c9d3c0f2d6bafd546a9dc38a04818544f4e85eeef1887b6466ed92ab9f0486e91635f960007f60c53430d961cc6dc1d07459f2cb9
 DIST swi-prolog-7.1.14-gentoo-patchset-0.tar.gz 1614 SHA256 fd16fa16ddba0869a31dbe3b2a2402a2cfb8b18a64c21c2572b3f32247d4c2cf SHA512 8f6432c36eabc473bf9114ead8230e0d03bb379f7e404f1ed491fe10359b3785d6aeb3433e089b25b92ca8f332c2f1197272269ecb9a05280694a9f58e72c160 WHIRLPOOL abfb727c7c3edb549e5acd7aa2066cafec746b7f21ca3a60d0736c5eeee383bb79166b35b37eb4fc2721c0a3407bf06a3380fea0fceeb37525fd80b536475678
+DIST swi-prolog-7.1.15-gentoo-patchset-0.tar.gz 1599 SHA256 0747874aa0ace023a86fd10f217391061babb167b27bd2fbb037ee04a33efc81 SHA512 ec01c9ae52e99d2d07b587198c2c743a086f195adcb9a64772c0f5188f44b6889973afe42217b80545cfbbd6870cd2b4086c5edb76a1537c15a9556bdb9ed5fd WHIRLPOOL b375f4bae28429fbf833cd825d4bd636b31632607631e2cc1b228b9fcea4e53997a23bab48cbe03feae95d49934a3eecb45d3cf95cd6d89a5c4dd604e3eacf22
 EBUILD swi-prolog-6.4.1.ebuild 2860 SHA256 f1c226d16415aaec7b93bbae9ed6c0d5d4d2e28b071f00eb071599fe4bab81f0 SHA512 a2612c8197e4ff26b8bbfb1ce97260666c08a3275aec517ada4d48f4700b9df6cfa3f398c427fd31324d9d06dc3b363d90cb4acb9978ee926dba75834798a1ac WHIRLPOOL c79df86d0a15bc9f7a4e4249f32fca98ef8a5d3c0c0abe84354ba515f078f8f19f599ca97399286b84514a3ce7c6c768b6ed8063b5cb9338ff6215afcfe80b95
 EBUILD swi-prolog-6.5.3.ebuild 2863 SHA256 95fc3c75c419f2f9e4616265770677d6de3cabc239a3f525c21b530a4833cac3 SHA512 211bdc39a78d2a3db654afe52144b2864927a89da4fec81932ee5bf89684237d541b27bf68fd5e03da18f788927c705037617536d9d0999a8edbf813cc372f4b WHIRLPOOL 6b0006684f28c2136175197a0151d387794119053bae56d484ccbcdc1d85fd6b7af3c1d824d72def5685d2efedea832f8dbe731f0e48fafd95cf483bbb1905a2
 EBUILD swi-prolog-6.6.2.ebuild 2906 SHA256 ae51c76da64f223d9da57936e8bc19408d656f76002402638c2e6902c0a47b87 SHA512 dc3d2c22d9da3f716843f83f12a2bf6f512659da5862550d667823741ef12d319dd68796a8b5f907bd7f1e423dba1331c57b5e6caa9d6b099f1fe88cbd3b649a WHIRLPOOL d1c8a9972251c68d3643e1f8d4f2216dd7e933d22aa01a47dceb0e2610bc6e94067f135537d347ea9bef00acf4e7ced709e565fd7daf8e7d2f5172f42357c26d
@@ -25,12 +27,13 @@ EBUILD swi-prolog-6.6.4.ebuild 2906 SHA256 98d5221f22f0a7747d36bb7b2d57140c92e42
 EBUILD swi-prolog-6.6.5.ebuild 2906 SHA256 fecefea51c16786882b7ee765adc29c858e85e0b94c94c95e3b5140f5092fd0e SHA512 2303eb774dd0cfee6e60490bfa4c3df59930ec6b7bca9b026d204241b7c9d2c9e51dcc42dbb3cc0967058e1b93c616e9190f177678249dfdd41106163f587915 WHIRLPOOL 362ba4675479f0ff0025a24418019eba29c8943bfdb152211637b3fc0ee53b91dd1bcf87c8ea1f8766b11289e813a3cd20b89c1eab602c8883df98bf0acd5d91
 EBUILD swi-prolog-7.1.13.ebuild 2906 SHA256 c5bfdaa789f6a64b8e59976100f3583b99469225296c255e675ba6136bc0147a SHA512 5ce00b14ee17af34a77901a052117e2b6e0fdaf376cbc96c4b41b929fd72efdcacbb11973bfc7156eb483718ddb0bb5084f32191818cdeb3ea32991c5633140c WHIRLPOOL 0437a90b5321c0b25540edecc0e4a5deb66ddb0a4d3f10fc3b780cab4cbb3ce6e10383d7ee7cacdf51bba6cdc7b76f262e9c71d1fe3f07c9bbb8229ac376a1f4
 EBUILD swi-prolog-7.1.14.ebuild 2906 SHA256 1ae549db8d08ef9e00c69f64c9c35189b78adf129563672ca9d266c98af6da62 SHA512 0d9c027db6e07ab922e291a08ea69c376903370411efb8cd6a370b62efe3f520103514984c84155c1cc79ebfa5ed034502681058d001e875348ca7efc9617935 WHIRLPOOL f59e59fd8ee754870b557168d8592d6b0c48b28e87054143cf17111185b7031479e29bae6e67436104ca4a5646a100d7b7e62bca64cbb7956c006b70f5f95ac2
-MISC ChangeLog 64092 SHA256 31575c6c65f3bef96b68477112ca5b93e6a3c7db1fd32e6aec12606bb99ff81a SHA512 64fcce015b85a4729e15cae75e3a13ce8babe45d4a7cf27cda6bad6b7be6c3abd3828f5bae5233cd2873d5a38aa016245879995f686670ccd335450a23b9c6f5 WHIRLPOOL 6e6e15c6ba57d082533324d578e9d4721f01ab9409e767ad9e304de8e5040df7a05f3e0c708011a3166a904ad81a4d0cbfe5dedac7289a6c4d14277cf1077d4e
+EBUILD swi-prolog-7.1.15.ebuild 2906 SHA256 0096f8a70b93c534b4b21575f2cff208c3b2259cfc4b6e14c6996e6e099f2bbc SHA512 297fd4d721a5f135a4b3ac0f04bd1f6486335f1e41b7eb7d7061bf3e9b5612fbf72e817ca009ea2ad3cf599f819d24ed825d35e0563147d998ecf047a4010a8a WHIRLPOOL 08cf4626b6c539e1ae74272aaa1aa840f13a4c5c7f426072a9e1d1a139f70cd1c09c43e7cc5a6af720eecaccf2ae20287f87a2535a5af00297c4c750eb37d370
+MISC ChangeLog 64219 SHA256 12659b73e0142ccf377bc5e69a9554f5f1fb2fa538f4c61da58fea4ade8106be SHA512 65935c204c0c94bb6ec39e36d985296e07996909c58950d4a9d41fac83fa7924c8d725a3069cb5913d2c4665d9dbf4f2dcb4df3fec9b889240410e3fdc5eed20 WHIRLPOOL 77a9581cdd7f77c2959ada1f98b4b4b0c73282a39581364818a604230a28ca486d9ced831f00da2632ed76b3635089a1a89492b7a0ddc8fc99744027a5f94ef9
 MISC metadata.xml 236 SHA256 cfc0f56c64161129f17e853433bcc92a212ae64ffe70f627ae6e24fd8cc3520a SHA512 c542f8fdc8c524ba187f02788407dd31a87a37255166c6ef184409e1469288736420df4dd39f42bf57bf367532ba9607484a6228790f5e71c1ca7bfb56525194 WHIRLPOOL 472c63b815161c5e04903d12cc2b5f8d7edf56ebdbd5407581534f728b95dc063cdcf227579f75c7ff819d29bb2ba02ee3b79480f46d60aa4de17199163e1242
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlN0mwwACgkQrwS/tqE49e0D7QCfaYezMUcbjy7e65p1Zh/5kovd
-0x0AnAqhMW80BuQRb+2Cjc4zHizdZpBa
-=n6Rb
+iEYEAREIAAYFAlN/MrYACgkQrwS/tqE49e0wkgCghhYSXRVhqI5MP9SjHP4tkn+L
+GM8Ani2L2bhXkiUU5b6CbSLRBuOn6h6M
+=AwDq
 -----END PGP SIGNATURE-----
